--- a/last/package.json
+++ b/last/package.json
@@ -6,6 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "abort-controller": "^3.0.0",
+    "emailjs": "^3.4.0",
+    "form-data": "^4.0.0",
+    "iconv-lite": "^0.6.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+    "node-fetch": "^2.6.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hz-Cool/qqtz.git"
